--- a/ui/src/assets/scss/_variables.scss
+++ b/ui/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
-$dark-main-background: #3e485b;
-$dark-background: #1f222c;
+$light-main-background: #f1f3f4;
+$light-background: #fff;
 
-$white-foreground: rgba(255, 255, 255, 0.87);
+$main-foreground: #212121;
 
 $green-light-background: #defaed;
 $green-neon-border: #84e27a;
